# FastExchange

./: README.md
FastExchange/: CMakeLists.txt  GITHUB_PUBLISH.md  LICENSE
FastExchange/api/: CMakeLists.txt  api_main.cpp  server.cpp  server.hpp
FastExchange/cli/: CMakeLists.txt  main.cpp
FastExchange/config/: default.yaml
FastExchange/core/: CMakeLists.txt
FastExchange/core/config/: config_loader.cpp  config_loader.hpp
FastExchange/core/engine/: exchange_engine.cpp  exchange_engine.hpp
FastExchange/core/event/: event.hpp  event_codec.cpp  event_codec.hpp
FastExchange/core/eventlog/: journal.cpp  journal.hpp  sha256.cpp  sha256.hpp
FastExchange/core/matching/: matching_plugin.hpp  price_time_fifo.cpp  price_time_fifo.hpp
FastExchange/core/metrics/: metrics.cpp  metrics.hpp  system_metrics.cpp  system_metrics.hpp
FastExchange/core/orderbook/: order_book.cpp  order_book.hpp
FastExchange/core/risk/: default_risk.cpp  default_risk.hpp  risk_plugin.hpp
FastExchange/core/symbols/: symbol_registry.cpp  symbol_registry.hpp
FastExchange/core/types/: inbound_event.hpp  order.hpp  trade.hpp  types.hpp
FastExchange/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
FastExchange/dashboard/src/: App.tsx  index.css
FastExchange/docs/: architecture.md  benchmark-env.md  data-structures.md  events.md  metrics.md  phase-plan.md  plugins.md  scenarios.md  vision.md
FastExchange/modules/: CMakeLists.txt
FastExchange/modules/benchmark/: benchmark_runner.cpp  benchmark_runner.hpp  compare.cpp
FastExchange/modules/profiler/: stage_profiler.cpp
FastExchange/modules/replay/: replay_engine.cpp  replay_engine.hpp
FastExchange/modules/scenario/: scenario_runner.cpp  scenario_runner.hpp
FastExchange/modules/workload/: base_strategy.cpp  base_strategy.hpp  builtin_strategies.cpp  builtin_strategies.hpp  register_strategies.cpp  register_strategies.hpp  replay_strategy.cpp  replay_strategy.hpp  workload_factory.cpp  workload_strategy.hpp
FastExchange/scenarios/: balanced.yaml  flash-crash.yaml  market-maker.yaml
FastExchange/scripts/: benchmark.sh
FastExchange/tests/: CMakeLists.txt  test_determinism.cpp  test_engine.cpp  test_journal.cpp  test_matching.cpp  test_metrics.cpp  test_orderbook.cpp
